--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -1,8 +1,9 @@
 .popular-movies{
+   margin-top: 2rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-column-gap: 1rem;
-    grid-row-gap: 2rem;
+    grid-row-gap: 1rem;
   }
   img{
     width: 100%;
@@ -18,18 +19,18 @@
   
   .filter-container button{
     margin-right: 2rem;
-    min-width: 5rem;
+    min-width: 7rem;
     padding: 0.5rem 1rem;
     border: none;
     background: white;
-    color: rgb(65, 98, 168);
-    border-radius: 1rem;
-    border: 2px solid rgb(28, 36, 53);
+    color:#ED8936 ;
+    border-radius: 3rem;
+    border: 1px solid #ED8936;
     font-weight: bold;
     cursor: pointer;
   }
   
   button.active {
-    background: rgb(65, 98, 168);
+    background: #ED8936;
     color: white;
   }
